fixed mobile alignment

--- a/app/modules/options/Options.css
+++ b/app/modules/options/Options.css
@@ -46,8 +46,6 @@
 
 @media only screen and (max-device-width: 768px) {
   .option-button {
-    left: 50%;
-    transform:translateX(-50%);
   }
 }
 @media only screen and (max-width 992px) {
